--- a/less/style.less
+++ b/less/style.less
@@ -4,63 +4,112 @@
 
 @import url(http://fonts.googleapis.com/css?family=Fenix);
 
-.centered() {
-  width: 50%;
-  text-align: center;
+.header {
+  margin-top: 100px;
+  margin-bottom: 35px;
+  text-transform: uppercase;
+  font-size: 14px;
+
+  a.title {
+    padding: 5px 10px 6px;
+    color: white;
+    text-decoration: none;
+    background: @brand-primary;
+    float: left;
+    display: block;
+
+    &:hover {
+      background: black;
+    }
+  }
 }
 
-.header {
-  .centered;
-  color: @gray-light;
+.row.post-header {
+  text-align: center;
+  text-transform: uppercase;
 
   h1 {
-    margin-top: 16px;
-    margin-bottom: 16px;
-
-    a { color: @brightPink; }
+    font-size: 52px;
+    font-weight: 700;
+    margin: 15px 0;
   }
 
-  a {
-    font-family: 'Fenix', serif;
-    margin: 2px;
+  time {
+    color: @gray;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 25px 0;
 
-    &:hover { text-decoration: none; }
-  }
-
-  img.avatar {
-    max-width: 100px;
-    height: auto;
-    border: 3px @gray-lighter solid;
+    &:after {
+      content: "";
+      margin: 40px auto 0;
+      width: 100px;
+      border-bottom: 1px dotted @gray-light;
+      display: block;
+    }
   }
 }
 
-.index {
-  margin-bottom: 40px;
+a.button-square {
+  text-decoration: none;
+  background: @heading;
+  color: white;
+  margin: 0 0 0 10px;
+  float: left;
+  padding: 0 10px;
+  font-size: 20px;
 
-  .date {
-    color: @gray-light;
+  &:hover {
+    background: black;
+  }
+}
+
+.content {
+  border-top: 6px solid @gray-darker;
+  padding-top: 35px;
+  margin-top: 80px;
+
+  .post-header {
+    border-bottom: 1px dotted @gray-dark;
+    padding: 20px 5px;
+    display: block;
+    text-decoration: none;
+    color: @brand-primary;
+
+    &:hover {
+      color: black;
+      background: @gray-lighter;
+    }
+
+    h4 {
+      font-size: 18px;
+      margin-bottom: 18px;
+      display: inline-block;
+      margin: 0;
+    }
+
+    time {
+      color: @gray-dark;
+      display: inline-block;
+
+      &:before {
+        content: "/ ";
+      }
+    }
+  }
+
+  p {
+    margin-bottom: 30px;
   }
 
   h3 {
-    margin-top: 10px;
-    margin-bottom: 24px;
-
-    a:hover { text-decoration: none; }
+    font-weight: bold;
+    margin: 20px 0 30px;
   }
 }
 
 #disqus_thread {
   margin-top: 60px;
-}
-
-img.headline {
-  width: auto;
-  height: 125px;
-}
-
-h1 {
-  margin-top: 10px;
-  margin-bottom: 26px;
 }
 
 svg {
